# CSCI-261

./: .gitignore  AvailableTimeBlock.cpp  AvailableTimeBlock.h  Bubble.cpp  Bubble.h  CMakeLists.txt  Date.cpp  Date.h  Event.cpp  Event.h  EventTime.cpp  EventTime.h  Godzilla.cpp  Godzilla.h  Person.h  README.md  Star.cpp  Star.h  StringTests_main.cpp  Util.cpp  Util.h  final.txt  functions.cpp  functions.h  main.cpp
output/: aliceChapter1.out  greeneggsandham.out
people/: Mr. Potato Head.txt  Nathan Panzer.txt
